# rust

./: .all-contributorsrc  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  release.sh  tsconfig.json  tsconfig.test.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/vercel_axum/: Cargo.toml
crates/vercel_axum/src/: lib.rs
crates/vercel_runtime/: Cargo.toml
crates/vercel_runtime/src/: http.rs  lib.rs  request.rs  response.rs
crates/vercel_runtime_macro/: Cargo.toml
crates/vercel_runtime_macro/src/: lib.rs
crates/vercel_runtime_router/: Cargo.toml
crates/vercel_runtime_router/src/: lib.rs
crates/vercel_runtime_router/src/snapshots/: vercel_runtime_router__tests__dynamic_routing-10.snap  vercel_runtime_router__tests__dynamic_routing-11.snap  vercel_runtime_router__tests__dynamic_routing-12.snap  vercel_runtime_router__tests__dynamic_routing-13.snap  vercel_runtime_router__tests__dynamic_routing-14.snap  vercel_runtime_router__tests__dynamic_routing-15.snap  vercel_runtime_router__tests__dynamic_routing-16.snap  vercel_runtime_router__tests__dynamic_routing-17.snap  vercel_runtime_router__tests__dynamic_routing-18.snap  vercel_runtime_router__tests__dynamic_routing-19.snap  vercel_runtime_router__tests__dynamic_routing-2.snap  vercel_runtime_router__tests__dynamic_routing-20.snap  vercel_runtime_router__tests__dynamic_routing-21.snap  vercel_runtime_router__tests__dynamic_routing-22.snap  vercel_runtime_router__tests__dynamic_routing-23.snap  vercel_runtime_router__tests__dynamic_routing-24.snap  vercel_runtime_router__tests__dynamic_routing-3.snap  vercel_runtime_router__tests__dynamic_routing-4.snap  vercel_runtime_router__tests__dynamic_routing-5.snap  vercel_runtime_router__tests__dynamic_routing-6.snap  vercel_runtime_router__tests__dynamic_routing-7.snap  vercel_runtime_router__tests__dynamic_routing-8.snap  vercel_runtime_router__tests__dynamic_routing-9.snap  vercel_runtime_router__tests__dynamic_routing.snap  vercel_runtime_router__tests_tmp__dynamic_routing-2.snap  vercel_runtime_router__tests_tmp__dynamic_routing.snap
demo/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  vercel.json
demo/api/: complex.rs  simple.rs
demo/src-rs/: lib.rs
examples/cron/: .env.example  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  vercel.json
examples/cron/api/: cron.rs
examples/merged/: Cargo.toml  vercel.json
examples/merged/api/: foo.rs  index.rs
examples/nextjs/: .eslintrc.json  .gitignore  Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vercel.json
examples/nextjs/api/: rust.rs
examples/nextjs/components/: button.tsx
examples/nextjs/pages/: _app.tsx  index.tsx
examples/nextjs/pages/api/: nodejs.ts  typescript.ts
examples/nextjs/styles/: globals.css
examples/nextjs/types/: module.d.ts
examples/route-merge/: Cargo.toml  index.js  package.json  vercel.json
examples/route-merge/api/: [...all].rs  foo.rs  main.rs
examples/route-merge/api/all/: [...slugs].rs
examples/route-merge/api/bar/: [id].rs  baz.rs
examples/route-merge/api/dynamic/: [path].rs
examples/route-merge/api/dynamic/[path]/: [id].rs  static.rs
examples/route-merge/api/optional/: [[...slugs]].rs
examples/route-merge/api/vercel/: index.rs
examples/simple/: Cargo.toml  package.json  vercel.json
examples/simple/api/: complex.rs  simple.rs
examples/simple/api/user/: [id].rs
package/: CHANGELOG.md  README.md  launcher.rs  package-lock.json  package.json
src/: body.rs  error.rs  index.ts  install-rust.ts  lib.rs  request.rs  response.rs  strmap.rs
src/lib/: cargo.ts  routes.test.ts  routes.ts  runtime.ts  rust-toolchain.ts  utils.ts
test/: fixtures.test.ts  test.js
test/fixtures/01-include-files/: Cargo.toml  main.rs  now.json  package.json  probes.json  test.vercel.json  vercel.json
test/fixtures/01-include-files/api/: main.rs
test/fixtures/01-include-files/src/: main.rs
test/fixtures/02-with-rust-entrypoint/: now.json
test/fixtures/02-with-utility/: Cargo.toml  now.json  package.json  probes.json  test.vercel.json  vercel.json
test/fixtures/02-with-utility/api/: Cargo.toml  _util.rs  user.rs
test/fixtures/03-with-function/: Cargo.toml  now.json  package.json  probes.json  test.vercel.json  vercel.json
test/fixtures/03-with-function/api/: Cargo.toml  user.rs
test/fixtures/04-with-parameter/: Cargo.toml  now.json  package.json  probes.json  test.vercel.json  vercel.json
test/fixtures/04-with-parameter/api/: Cargo.toml  [user].rs
test/fixtures/04-with-parameter/api/user/: [id].rs
test/fixtures/05-preconfigured-binary/: Cargo.toml  test.vercel.json
test/fixtures/05-preconfigured-binary/api/: hello.rs
test/fixtures/05-preconfigured-binary/src/: lib.rs
test/fixtures/05-with-similar-entrypaths/: Cargo.toml  package.json  probes.json  vercel.json
test/fixtures/05-with-similar-entrypaths/api/group/: [id].rs
test/fixtures/05-with-similar-entrypaths/api/user/: [id].rs
test/fixtures/06-with-toolchain-override/: build.sh  package.json  probes.json  vercel.json
test/fixtures/06-with-toolchain-override/api/: handler.rs
test/fixtures/06-with-toolchain-override/static/: toolchain.txt
test/fixtures/07-with-cargo-configuration/: Cargo.toml  build.sh  package.json  probes.json  vercel.json
test/fixtures/07-with-cargo-configuration/.cargo/: config.toml
test/fixtures/07-with-cargo-configuration/api/: handler.rs
test/fixtures/07-with-cargo-configuration/static/: cargo_config.txt
vercel_runtime/: Cargo.toml
vercel_runtime/src/: body.rs  lib.rs  request.rs  response.rs
