[workspace]

members = [
    "vercel_runtime",
    "examples/cron",
    "examples/merged",
    "examples/nextjs",
    "examples/simple",
    # "test/fixtures/01-include-files",
    # "test/fixtures/02-with-utility",
    # "test/fixtures/03-with-function",
    # "test/fixtures/04-with-parameter",
    # "test/fixtures/05-preconfigured-binary"
]

exclude = [
  "test/fixtures/01-include-files",
  "test/fixtures/02-with-utility",
]
