[package]
name = "vercel_runtime"
version = "1.0.0"
edition = "2021"
authors = ["Vercel <support@vercel.com>"]
description = "Vercel Rust Function Runtime"
keywords = ["Vercel", "Rust", "Serverless", "Functions"]
license = "MIT"
homepage = "https://github.com/vercel-community/rust"
repository = "https://github.com/vercel-community/rust"
documentation = "https://docs.rs/vercel_lambda"
include = [
  "src/*.rs",
  "Cargo.toml"
]
exclude = [
  "tests/*",
]

[dependencies]
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["raw_value"] }
serde_derive = "1.0.152"
tower-http = { version = "0.4.0", features = ["cors"] }
tower-service = "0.3.2"
base64 = "0.21.0"
bytes = "1.4.0"
async-trait = "0.1.66"
# vercel_runtime_router = { version = "1.0.0", path = "../vercel_runtime_router" }
# vercel_runtime_macro = { version = "1.0.0", path = "../vercel_runtime_macro" }
vercel_runtime_router = "1.0.0"
vercel_runtime_macro = "1.0.0"
