[package]
name = "vercel_runtime"
version = "1.1.0"
edition = "2021"
authors = ["Vercel <support@vercel.com>"]
description = "Vercel Rust Function Runtime"
keywords = ["Vercel", "Rust", "Serverless", "Functions"]
license = "MIT"
homepage = "https://github.com/vercel-community/rust"
repository = "https://github.com/vercel-community/rust"
documentation = "https://docs.rs/vercel_lambda"
include = [
  "src/*.rs",
  "Cargo.toml"
]
exclude = [
  "tests/*",
]

[dependencies]
lambda_http = { version = "0.8.1", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.106", features = ["raw_value"] }
serde_derive = "1.0.188"
tower-http = { version = "0.4.4", features = ["cors"] }
tower-service = "0.3.2"
base64 = "0.21.4"
bytes = "1.5.0"
async-trait = "0.1.73"
# vercel_runtime_router = { version = "1.0.2", path = "../vercel_runtime_router" }
# vercel_runtime_macro = { version = "1.0.2", path = "../vercel_runtime_macro" }
vercel_runtime_router = "1.0.2"
vercel_runtime_macro = "1.0.2"
