[package]
name = "vercel_runtime_macro"
version = "1.1.1"
edition = "2021"
authors = ["Vercel <support@vercel.com>"]
description = "Vercel Rust Function Runtime Macro"
keywords = ["Vercel", "Rust", "Serverless", "Functions", "Macro"]
license = "MIT"
homepage = "https://github.com/vercel-community/rust"
repository = "https://github.com/vercel-community/rust"
documentation = "https://docs.rs/vercel_lambda"

[lib]
proc-macro = true

[dependencies]
glob = "0.3.1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
vercel_runtime_router = "1.1.1"
# vercel_runtime_router = { version = "1.1.0", path = "../vercel_runtime_router" }
