[package]
name = "vercel_runtime_router"
version = "0.3.4"
edition = "2021"
authors = ["Vercel <support@vercel.com>"]
description = "Vercel Rust Function Runtime Router"
keywords = ["Vercel", "Rust", "Serverless", "Functions", "Router"]
license = "MIT"
homepage = "https://github.com/vercel-community/rust"
repository = "https://github.com/vercel-community/rust"
documentation = "https://docs.rs/vercel_lambda"

[dependencies]
glob = "0.3.1"
quote = "1.0"
regex = "1.7.1"
syn = { version = "1.0.109", features = ["full", "parsing"] }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.28.0" }
