[package]
name = "vercel_runtime_router"
version = "1.1.0"
edition = "2021"
authors = ["Vercel <support@vercel.com>"]
description = "Vercel Rust Function Runtime Router"
keywords = ["Vercel", "Rust", "Serverless", "Functions", "Router"]
license = "MIT"
homepage = "https://github.com/vercel-community/rust"
repository = "https://github.com/vercel-community/rust"
documentation = "https://docs.rs/vercel_lambda"

[dependencies]
glob = "0.3.1"
quote = "1.0.33"
regex = "1.9.5"
syn = { version = "2.0.32", features = ["full", "parsing"] }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.31.0" }
