[package]
name = "runtime_demo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
serde_derive = "1.0.9"
rand = "0.8.5"
vercel_runtime = { version = "0.1.4", path = "../../vercel_runtime" }
slack-morphism = { version = "1.2.2", features = ["hyper"] }

[[bin]]
name = "cron"
path = "api/cron.rs"
