[package]
name = "merged_runtime_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.86", features = ["raw_value"] }
serde_derive = "1.0.9"
rand = "0.8.5"
url = "2.3.1"
# vercel_runtime = { version = "1.0.1", path = "../../crates/vercel_runtime" }
vercel_runtime = "1.0.1"

[[bin]]
name = "main"
path = "api/main.rs"
