[package]
name = "integration_test"
version = "1.0.0"
authors = [
  "Florentin Eckl <florentin.eckl@vercel.com>",
  "Doug Parsons <doug@vercel.com>",
]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
vercel_runtime = { version = "*" }

[[bin]]
name = "user"
path = "api/user.rs"
