[package]
name = "integration_test"
version = "1.0.1"
authors = [
  "Florentin Eckl <florentin.eckl@vercel.com>",
  "Doug Parsons <doug@vercel.com>",
]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
vercel_runtime = { version = "*" }

[[bin]]
name = "user-id" # provide a different, unique, name
path = "api/user/[id].rs" # [id.rs] is same as below

[[bin]]
name = "group-id"
path = "api/group/[id].rs"
