[package]
name = "integration_test"
version = "1.0.1"
authors = [
  "Florentin Eckl <florentin.eckl@vercel.com>",
  "Doug Parsons <doug@vercel.com>",
]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros"] }
vercel_runtime = { version = "*" }
serde_json = { version = "1.0.86", features = ["raw_value"] }

[[bin]]
name = "handler"
path = "api/handler.rs"
